--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -416,7 +416,7 @@
         <scene sceneID="xsV-9b-f12">
             <objects>
                 <navigationController id="PZR-TT-tbp" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Training" id="9fb-Ug-en2"/>
+                    <tabBarItem key="tabBarItem" title="Training" image="Workout" id="9fb-Ug-en2"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yER-jH-06c">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1247,6 +1247,7 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="White bubble" width="474" height="512"/>
+        <image name="Workout" width="25" height="25"/>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="folder" catalog="system" width="128" height="95"/>
         <image name="folder.badge.plus" catalog="system" width="128" height="86"/>
